--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,9 +3,9 @@ import '../styles/global.css'
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Index">
+<Layout title="404">
 	<main>
-		<h1>Index</h1>
+		<h1>404</h1>
 	</main>
 </Layout>
 
